@@ -1,5 +1,9 @@
 2010-09-27  Peter Rosin  <peda@lysator.liu.se>
 
+	tests: check if sys_lib_search_path_spec works on MSVC.
+	* tests/search-path.at (sys_lib_search_path on w32): New test,
+	making sure v2.2.10-207-g09142ea doesn't regress.
+
 	Skip need_lib_prefix.at on systems without lib prefix on libraries.
 	* tests/need_lib_prefix.at [MSVC, OS/2]: Skip this test on
 	systems that do not have libraries prefixed with lib.
